--- a/static/login.css
+++ b/static/login.css
@@ -1,6 +1,176 @@
-.login_form {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Quicksand", sans-serif;
+}
+a {
+  text-decoration: none;
+}
+a:visited {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: none;
+}
+a:focus {
+  text-decoration: none;
+}
+a:hover,
+a:active {
+  text-decoration: none;
+}
+
+body {
+  width: 100%;
+  height: 100vh;
+}
+.container {
+  position: relative;
+  display: flex;
+  justify-content: center;
   align-items: center;
-  margin-top: 100px;
-  border: "solid 1px";
+  width: 100%;
+  height: 100%;
+  padding: 20px 100px;
+}
+.container:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: url("bg.jpg") no-repeat center;
+  background-size: cover;
+  z-index: -1;
+  filter: blur(50px);
+}
+.contact-box {
+  max-width: 850px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: #fff;
+  box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+}
+.container .left {
+  width: 20rem;
+  height: 40rem;
+  background: url("bg.jpg") no-repeat center;
+  background-size: cover;
+}
+.container .right {
+  padding: 25px 40px;
+}
+h2 {
+  position: relative;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+h2:after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  height: 4px;
+  width: 50px;
+  border-radius: 2px;
+  background-color: #2ecc71;
+}
+
+.formBox {
+  width: 100%;
+  padding: 60px 40px;
+  box-sizing: border-box;
+  height: 400px;
+  background: #fff;
+}
+
+.formBox a {
+  color: #262626;
+  font-size: 13px;
+  font-weight: bold;
+}
+
+#login_design {
+  margin-top: 10px;
+  height: 60px;
+  width: 100px;
+  color: #fff;
+  background: #2ecc71;
+  border: #333;
+  font-size: 13px;
+  font-weight: bold;
+  border-radius: 2.5px;
+}
+
+#login_design a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.user_info {
+  margin-top: 14px;
+  color: #777;
+  font-size: 10px;
+  font-weight: bold;
+}
+
+.user_info label {
+  cursor: pointer;
+}
+
+.user_info input {
+  cursor: pointer;
+}
+
+.user_info a {
+  color: #777;
+  font-size: 10px;
+  font-weight: bold;
+}
+
+#position_middle {
+  vertical-align: 0.25em;
+}
+.btn {
+  border-radius: 5px;
+  width: 100%;
+  padding: 0.5rem 1rem;
+  font-size: 0.7rem;
+  min-height: 38px;
+  font-weight: bold;
+  background-color: #2ecc71;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  color: #fff;
+  transition: 0.3s;
+}
+.btn:hover {
+  background-color: #27ae60;
+  color: #333;
+}
+
+.btn:hover a {
+  color: #333;
+}
+
+.btn a {
+  font-size: 0.7rem;
+  font-weight: bold;
+  color: #fff;
+  text-decoration: none;
+}
+@media screen and (max-width: 880px) {
+  .contact-box {
+    grid-template-columns: 1fr;
+  }
+  .left {
+    height: 200px;
+  }
 }
