--- a/templates/index.html
+++ b/templates/index.html
@@ -53,11 +53,13 @@
             <h3>기술보고서</h3>
           </div>
         </div>
-
         <div class="face face2">
           <div class="content">
             <p>기술보고서 다운로드</p>
-            <a href="FaceID.dox">다운로드</a>
+            <a
+              href="https://drive.google.com/file/d/1NZv1-xaTiyycbQJP9OptgYV9LK76NdmW/view?usp=sharing"
+              >다운로드</a
+            >
           </div>
         </div>
       </div>
